<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Allinone</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
	<string name="title_activity_Calculator">TipCaculator</string>
	<string name="title_activity_main">Tape Me</string>
	<string name="title_activity_torch">Torch</string>
	<string name="challenge">Challenge for you!</string>
	<string name="button">100</string>
	<string name="warrning">INSTRUCTIONS:\n\nTry to tap the button 100 times within 30 seconds.\n\nBest of Luck!</string>
    <string name="billTotal">Bill Total</string>
    <string name="tip" >Tip</string>
    <string name="total">Total</string>
    <string name="custom">Custom</string>
    <string name="zero">0.00</string>
</resources>