<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/background"
    android:orientation="vertical" 
    android:background="@color/blue">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/challenge"
        android:textColor="@color/sss"
        android:textSize="20sp"
        android:layout_margin="20dip"
        android:textStyle="bold" 
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/ppp"
        android:layout_margin="20dip"
        android:text="@string/warrning"
        android:id="@+id/blurb" 
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dip"
        android:padding="25dip"
        android:text="@string/button"
        android:background="@color/red"
         />

</LinearLayout>
